# TwilightEngine2D

./: .gitignore  CMakeLists.txt
game/lua/: another_script.lua  start.lua  update.lua
game/lua/test/: start.lua  update.lua
inc/: LuaEngine.h  debug.h  log.h
inc/Engine/: Camera.h  Movable.h  Object.h  OpenGLWindow.h  Render.h  Scene.h  Sprite.h  Window.h
inc/Engine/RenderEngine/: RenderEngine.h  SpriteRenderer.h  TileMapRenderer.h
inc/Engine/ShaderLoader/: DefaultShaders.h  ShaderLoader.h
lua/: another_script.lua  start.lua  update.lua
src/: main.cpp
src/Engine/: Camera.cpp  Object.cpp  OpenGLWindow.cpp  Scene.cpp  Sprite.cpp  Window.cpp
src/Engine/RenderEngine/: SpriteRenderer.cpp
